# vk-markovify-chatbot

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  config.ini  config.py  config.toml  docker-compose.yml  install-termux.sh  mypy.ini  pyproject.toml  requirements.txt  start-termux.sh  start.bat  start.cmd  start.sh
.github/workflows/: ci.yml
vk_markovify_chatbot/: __main__.py  bot.py  config.py  db.py  fs.py  http.py  logs.py  text.py  utils.py
