[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "vk-markovify-chatbot"
version = "0.0.0"
license = { text = "MIT" }
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.9,<4"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "aiohttp>=3.8.6,<4",
  "aiosqlite>=0.14,<0.21",
  "attrs>=21.3",
  "brotli>=1,<2; implementation_name=='cpython'",
  "brotlicffi<2; implementation_name!='cpython'",
  "certifi",
  "charset-normalizer>=2,<4",
  "markovify>=0.6,<0.10",
  "platformdirs<5",
  "rich>=10.2,<14",
  "tomli<3; python_version<'3.11'",
  "vkbottle>=4,<5",
  "winloop<0.1.7; implementation_name=='cpython' and (sys_platform=='cygwin' or sys_platform=='win32')",
]
optional-dependencies.non-termux = [
  "aiodns>=1.1,<4",
  "uvloop>=0.14,<0.22; implementation_name=='cpython' and (sys_platform=='darwin' or sys_platform=='linux')",
]
optional-dependencies.nuitka = ["nuitka==2.4.11"]
urls.repository = "https://github.com/monosans/vk-markovify-chatbot"

[tool.uv]
dev-dependencies = [
  "mypy[faster-cache]==1.13",
  "ruff==0.7.1",
  "tomli==2.0.2",
  "typing-extensions==4.12.2",
]
